feat: improve terminal ui

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,7 @@
 	--sidebar_file_background: #555555;
 	--topbar_background: #181818;
 	--topbar_foreground: #f6f6f6;
+	--terminal_background: #2f2f2f;
 	--topbar_tabs: #333333;
 	--topbar_tabs_active: #636363;
 	--topbar_tabs_hover: #555555;
