--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,6 +30,28 @@ body {
 	margin: 0;
 }
 
+/* width */
+::-webkit-scrollbar {
+	height: 5px;
+	width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: var(--accent_color);
+}
+
 @media (prefers-color-scheme: dark) {
 	body {
 		color: var(--editor_foreground);
