--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,6 +28,8 @@
 
 body {
 	margin: 0;
+		color: var(--editor_foreground);
+		background-color: var(--editor_background);
 }
 
 /* width */
@@ -52,14 +54,11 @@ body {
 	background: var(--accent_color);
 }
 
+.xterm {
+	position: absolute;
+	bottom: 0;
+	border-bottom: var(--terminal_background) 1px solid;
+}
 .xterm.focus {
 	border-bottom: var(--accent_color) 1px solid;
-}
-
-@media (prefers-color-scheme: dark) {
-	body {
-		color: var(--editor_foreground);
-		background-color: var(--editor_background);
-	}
-
 }
