feat: depth indicator for files in sidebar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,7 @@
 	--sidebar_background: #121212;
 	--sidebar_foreground: #f6f6f6;
 	--sidebar_file_background: #555555;
+	--sidebar_indent_color: grey;
 	--topbar_background: #181818;
 	--topbar_foreground: #f6f6f6;
 	--terminal_background: #2f2f2f;
